# easy-config-logic

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  Changelog.md  Makefile  README.md  common.mk  index.html  scaler-names.json  sitemap.xml  subdir.mk  versions.json
.github/workflows/: cmake-single-platform.yml
2.2/: 404.html  index.html  sitemap.xml
2.2/developer/config/: index.html
2.2/developer/standalone/: index.html
2.2/developer/standardize/: index.html
2.2/developer/syntax/: index.html
2.2/hardware/combine/: index.html
2.2/hardware/mztio/: index.html
2.2/hardware/pixie16/: index.html
2.2/search/: search_index.json
2.2/user_guide/advanced/: index.html
2.2/user_guide/config_examples/: index.html
2.2/user_guide/config_syntax/: index.html
2.2/user_guide/pre_install/: index.html
2.2/user_guide/quick_start/: index.html
2.3/: 404.html  FPGA内存设置-v2.3.xlsx  index.html  sitemap.xml
2.3/developer/client/: index.html
2.3/developer/code_framework/: index.html
2.3/developer/compile/: index.html
2.3/developer/config/: index.html
2.3/developer/standardize/: index.html
2.3/developer/syntax/: index.html
2.3/developer/tools/: index.html
2.3/hardware/combine/: index.html
2.3/hardware/mztio/: index.html
2.3/hardware/pixie16/: index.html
2.3/search/: search_index.json
2.3/user_guide/advanced/: index.html
2.3/user_guide/config_examples/: index.html
2.3/user_guide/config_syntax/: index.html
2.3/user_guide/getting_started/: index.html
2.3/user_guide/setup_mztio/: index.html
bootfiles/: devicetree.dtb
config/: test1.toml  test2.toml
developer/config/: index.html
developer/standalone/: index.html
developer/standardize/: index.html
developer/syntax/: index.html
docs/: CMakeLists.txt  FPGA内存设置-v2.3.xlsx  mkdocs.yml
docs/docs/: index.md
docs/docs/developer/: compile.md  config.md  standalone.md  standardize.md  syntax.md
docs/docs/hardware/: combine.md  mztio.md  pixie16.md
docs/docs/resource/: FPGA内存设置-v2.2.xlsx
docs/docs/user_guide/: advanced.md  config_examples.md  config_syntax.md  getting_started.md  pre_install.md  setup_mztio.md
examples/: example_logic_0.txt  example_logic_1.txt
examples/fpga/: easy_config_logic_v_2_3.bit  general_logic_v2.bit
hardware/combine/: index.html
hardware/mztio/: index.html
hardware/pixie16/: index.html
include/: i2c.h  parse_result.h  service.h
include/config/: config_parser.h  logic_parser.h  memory.h  memory_config.h
include/scaler/: scaler_service.h
include/standardize/: standard_logic_downscale_tree.h  standard_logic_node.h  standard_logic_tree.h
include/syntax/: arithmetic_grammar.h  logic_comparer.h  logic_downscale_grammar.h  logical_grammar.h
include/syntax/parser/: grammar.h  lexer.h  production.h  syntax_parser.h  token.h
proto/: CMakeLists.txt  ecl.proto
src/: CMakeLists.txt  Makefile  i2c.cpp  parse_result.cpp  service.cpp  stdc++compact.cpp
src/config/: CMakeLists.txt  Makefile  config_parser.cpp  logic_parser.cpp  memory_config.cpp
src/scaler/: CMakeLists.txt  scaler_service.cpp
src/standardize/: CMakeLists.txt  standard_logic_downscale_tree.cpp  standard_logic_node.cpp  standard_logic_tree.cpp
src/syntax/: CMakeLists.txt  Makefile  arithmetic_grammar.cpp  logic_comparer.cpp  logic_downscale_grammar.cpp  logical_grammar.cpp
src/syntax/parser/: CMakeLists.txt  Makefile  grammar.cpp  lexer.cpp  production.cpp  syntax_parser.cpp  token.cpp
standalone/: CMakeLists.txt  Makefile  compare_logical_expression.cpp  config.cpp  convert.cpp  i2c.cpp  logic_test.cpp  scaler_server.cpp  server.cpp  standard_logic_adapter.cpp  standardize.cpp  syntax_tree.cpp
standalone/scaler/: CMakeLists.txt  Makefile  main.js  scaler-visual.html  scaler.cpp  scaler_client.cpp  scaler_defs.h  scaler_http_server.cpp  scaler_server.cpp
test/: CMakeLists.txt
test/config/: CMakeLists.txt  test_config_parser.cpp  test_logic_parser.cpp  test_memory.cpp  test_memory_config.cpp
test/config/data/: logic_config_1.txt  register_config_0_origin.txt  register_config_1.txt
test/standardize/: CMakeLists.txt  test_standard_logic_downscale_tree.cpp  test_standard_logic_tree.cpp
test/syntax/: CMakeLists.txt  test_logic_comparer.cpp
test/syntax/parser/: CMakeLists.txt  test_grammar.cpp  test_lexer.cpp  test_production.cpp  test_syntax_parser.cpp
user_guide/advanced/: index.html
user_guide/config_examples/: index.html
user_guide/config_syntax/: index.html
user_guide/pre_install/: index.html
user_guide/quick_start/: index.html
